learned preserving and destroying state

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .hover {
+        width: 200px;
+        background-color: blue;
+        border: 2rem;
+    }
+}
