--- a/src/index.css
+++ b/src/index.css
@@ -2,73 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-    .hover {
-        width: 200px;
-        background-color: blue;
-        border: 2rem;
-    }
+* {
+    box-sizing: border-box;
+}
 
-    * {
-        box-sizing: border-box;
-    }
+body {
+    font-family: sans-serif;
+    margin: 20px;
+    padding: 0;
+}
 
-    body {
-        font-family: sans-serif;
-        margin: 20px;
-        padding: 0;
-    }
+h1 {
+    margin-top: 0;
+    font-size: 22px;
+}
 
-    h1 {
-        margin-top: 0;
-        font-size: 22px;
-    }
+h2 {
+    margin-top: 0;
+    font-size: 20px;
+}
 
-    h2 {
-        margin-top: 0;
-        font-size: 20px;
-    }
+h3 {
+    margin-top: 0;
+    font-size: 18px;
+}
 
-    h3 {
-        margin-top: 0;
-        font-size: 18px;
-    }
+h4 {
+    margin-top: 0;
+    font-size: 16px;
+}
 
-    h4 {
-        margin-top: 0;
-        font-size: 16px;
-    }
+h5 {
+    margin-top: 0;
+    font-size: 14px;
+}
 
-    h5 {
-        margin-top: 0;
-        font-size: 14px;
-    }
+h6 {
+    margin-top: 0;
+    font-size: 12px;
+}
 
-    h6 {
-        margin-top: 0;
-        font-size: 12px;
-    }
+code {
+    font-size: 1.2em;
+}
 
-    code {
-        font-size: 1.2em;
-    }
+ul {
+    padding-inline-start: 20px;
+}
 
-    ul {
-        padding-inline-start: 20px;
-    }
+.section {
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+}
 
-    button {
-        margin: 5px;
-    }
-
-    li {
-        list-style-type: none;
-    }
-
-    ul,
-    li {
-        margin: 0;
-        padding: 0;
-    }
-
+.fancy {
+    border: 4px dashed purple;
 }
